# gene-sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  research.md  run.config.example  run.sh  rust-toolchain.toml
.claude/agents/: gatekeeper.md  implementer.md  planner.md  reviewer.md
.claude/skills/gate/: SKILL.md
.claude/skills/iterate/: SKILL.md
.claude/skills/roadmap-iterate/: SKILL.md
.claude/skills/roadmap-plan/: SKILL.md
.claude/skills/slice-done/: SKILL.md
.claude/workflows/: brush-colony-binding-impl.js  codex-browse-panel-impl.js  colony-polish-impl.js  colony-polygon-render-impl.js  colony-snapshot-channel-impl.js  contamination-bakes-remaining-impl.js  contamination-core-impl.js  contamination-research-design.js  contamination-s3-renderer-impl.js  contamination-s4-spore-dormancy-impl.js  contamination-s5-symbionts-impl.js  core-ui-items-123-impl.js  discovery-continue-from-gem-impl.js  discovery-dramaweights-impl.js  discovery-evolve-impl.js  discovery-harness-impl.js  discovery-load-gem-replay-impl.js  discovery-ridgeint-impl.js  discovery-scenarios-impl.js  discovery-search-impl.js  ecoli-oversight-gameloop-design.js  ecoli-visibility-impl.js  ecology-substrate-design.js  ecosystem-species-viz-impl.js  emergent-scorer-design.js  f2-strategy-substrate-impl.js  f3-4-chemostat-tuning-impl.js  f3-metabolism-keystone-design.js  f3-metabolism-keystone-impl.js  f4-trophic-decomposer-design.js  f4-trophic-decomposer-impl.js  f5-balance-impl.js  f5-chem-field-impl.js  intervention-rework-bioblocks-design.js  let-loose-direction-design.js  live-session-sparkline-impl.js  lod-pop-impl.js  midnight-review.js  oversight-ingame-ui-impl.js  oversight-loop-plumbing-impl.js  (+47 more)
.github/workflows/: ci.yml  release.yml
crates/crispr/: Cargo.toml
crates/crispr/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: ecology.rs  fixed.rs  lib.rs  search.rs  surrogate.rs  trace.rs
crates/discovery/tests/: oracle.rs
crates/genome/: Cargo.toml
crates/genome/examples/: emit_species.rs
crates/genome/src/: lib.rs  spec.rs
crates/genome/tests/: prop.rs
crates/godot-sim/: Cargo.toml
crates/godot-sim/godot/: gene_sim.gdextension  livesim_smoke.gd
crates/godot-sim/src/: lib.rs  worker.rs
crates/harness/: Cargo.toml
crates/harness/src/: campaign.rs  capture.rs  discover.rs  firewall.rs  gifenc.rs  keyframe.rs  lib.rs  main.rs  oversight.rs  promote.rs  replay.rs  species.rs
crates/harness/tests/: discover.rs  discover_edits.rs  discover_evolved.rs  episode_injections.rs  firewall_determinism.rs  oversight_renderer.rs  per_gen_stats.rs  replay_cli.rs  trace_capture.rs
crates/oracle-fba/: Cargo.toml
crates/oracle-fba/src/: lib.rs
crates/oracle-slim/: Cargo.toml
crates/oracle-slim/examples/: produce_trees.rs
crates/oracle-slim/src/: lib.rs
crates/relations-index/: Cargo.toml
crates/relations-index/src/: lib.rs
crates/sbol/: Cargo.toml
crates/sbol/src/: lib.rs  tests.rs
crates/sim-core/: Cargo.toml
crates/sim-core/benches/: tick.rs
crates/sim-core/src/: chem.rs  climate.rs  det.rs  fixed.rs  gp.rs  immigration.rs  ledger.rs  lib.rs  par.rs  resource.rs  signature.rs  snapshot.rs  soil.rs  trophic.rs
crates/sim-core/tests/: determinism_prop.rs
data/: cas_variants.ron  ecoli_ko_table.json
data/campaign/: intro.json
data/campaign/solutions/: README.md
data/campaign/solutions/intro/0/: actions.ndjson  seed.json
data/codex/: codex.json
data/golden/: slim_case1.json
data/presets/: primordial.json
data/presets/starters/: boom-bust.json  coexistence.json  drift.json  eventful.json  flat.json  index.json  limit-cycle.json
data/presets/starters/branch-point/: actions.ndjson  seed.json  starter.json
data/species/: aspergillus-niger.json  bacillus.json  bdellovibrio.json  carsonella.json  cutibacterium.json  default.json  ecoli.json  mycoplasma.json  penicillium.json  pseudomonas.json  staph.json  syn3.json
docs/llm/: DECISIONS.md  GLOSSARY.md  HANDOFF.md  LOOP.md  QUEUE.md  SNIPPETS.md  SPEC.md  TASKS.md  TAXONOMY.md  autonomous-roadmap.md
docs/llm/proposals/: contamination-immigration-draft.md  discovery-scorer-spec.md  ecoli-genome-f2-draft.md  ecoli-layered-architecture-draft.md  ecoli-oversight-gameloop-draft.md  ecology-substrate-draft.md  emergent-discovery-harness-draft.md  f3-metabolism-keystone-draft.md  f4-trophic-decomposer-draft.md  intervention-rework-bioblocks-draft.md  konermann-arc-crispr-verdict.md  let-loose-session-2026-06-21.md  live-ui-parallelization-draft.md  midnight-review-draft.md  multispecies-core-spine-draft.md  multispecies-prep-draft.md  parallel-sim-draft.md  phase-t-traits-draft.md  r3-multispecies-draft.md  rel-relations-draft.md  rendering-platform-architecture-draft.md  sbol-biobricks-integration-draft.md  sci-game-features-scopes-draft.md  sp4-codex-content-draft.md  starter-candidates.json  starter-map-research.md  surrogate-model-spec.md  visual-declutter-colony-draft.md  worker-thread-parallelization-draft.md
godot/: Main.tscn  brush.gd  codex.gd  colonies.gd  colony_s4_test.gd  colony_s5_test.gd  colony_s6_test.gd  data_layer.gdshader  export_presets.cfg  gallery.gd  glyph_factory.gd  iso.gd  iso_ground.gd  lsystem.gd  main.gd  main_menu.gd  microbe.gd  mold.gd  organisms.gd  panel.gd  pill_rail.gd  project.godot  relations_graph.gd  relations_heatmap.gd  snapshot.gd  sparkline.gd  species_visual_map.gd  timeline.gd
scripts/: aggregate_parquet.py  bake_aspergillus_niger_species.py  bake_bacillus_species.py  bake_bdellovibrio_species.py  bake_carsonella_species.py  bake_cutibacterium_species.py  bake_ecoli_ko_table.py  bake_ecoli_species.py  bake_mycoplasma_species.py  bake_penicillium_species.py  bake_pseudomonas_species.py  bake_staph_species.py  bake_syn3_species.py  check_license.sh  requirements.txt  slim_analyze.py
tools/: check_determinism.sh  check_determinism_multi_isa.sh  check_godot_snapshot.sh  check_livesim.sh  check_slim_oracle.sh  gate.sh  install_godot.sh  install_slim.sh  make_starter_gif.sh  run_batch.sh
(+3 files in other folders)
