[workspace]
resolver = "2"
members = [
    "crates/genome",
    "crates/crispr",
    "crates/sim-core",
    "crates/harness",
    "crates/oracle-slim",
]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "local"

# Pinned per invariant #7 (SPEC §2.1.7); exact versions locked in Cargo.lock and recorded in
# docs/llm/DECISIONS.md. crates/oracle-slim carries NO GPL deps (invariant #1) — it only ever shells out.
[workspace.dependencies]
genome = { path = "crates/genome" }
sim-core = { path = "crates/sim-core" }
crispr = { path = "crates/crispr" }
bevy_ecs = "0.19"
rand_chacha = "0.10"  # re-exports its matching rand_core (use rand_chacha::rand_core) to avoid version skew
proptest = "1"
criterion = { version = "0.8", default-features = false }

[profile.release]
# Determinism is build-scoped (SPEC §6); keep the release profile fixed for the reference build.
lto = "thin"
codegen-units = 1
