[workspace]
resolver = "2"
members = [
    "crates/genome",
    "crates/crispr",
    "crates/sim-core",
    "crates/discovery",
    "crates/harness",
    "crates/oracle-slim",
    "crates/oracle-fba",
    "crates/relations-index",
]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "local"

# Pinned per invariant #7 (SPEC §2.1.7); exact versions locked in Cargo.lock and recorded in
# docs/llm/DECISIONS.md. crates/oracle-slim carries NO GPL deps (invariant #1) — it only ever shells out.
[workspace.dependencies]
genome = { path = "crates/genome" }
sim-core = { path = "crates/sim-core" }
crispr = { path = "crates/crispr" }
bevy_ecs = "0.19"
rand_chacha = "0.10"  # re-exports its matching rand_core (use rand_chacha::rand_core) to avoid version skew
proptest = "1"
criterion = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }  # MIT/Apache-2.0 — data (de)serialization for the Cas table
serde_json = "1"  # MIT/Apache-2.0 — JSON for replay logs (seed.json + actions.ndjson; SPEC §5)
ron = "0.12"  # MIT/Apache-2.0 — Rusty Object Notation; git-friendly config/data format (SPEC §5)
bio = "4.0"  # MIT — rust-bio: sequence ops / PAM finding (SPEC §2.2 chosen lib); pinned to current minor
# MIT/Apache-2.0 (image-rs) — the in-process, GPL-CLEAN (inv #1) scenario-preview GIF pipeline: `png` decodes the
# per-keyframe frames captured via the renderer's `--shot`, `gif` (color_quant default feature) encodes the looping
# animated preview. Neither is GPL nor a subprocess — the encoder stays linked + pure-Rust (ADR-032). Pinned (inv #7).
gif = "0.13"
png = "0.17"
# MIT/Apache-2.0 — inv #1's process-boundary rule is GPL-ONLY, so linking rayon into the sim binary is fine.
# Pinned per inv #7 (ADR-020): deterministic data-parallelism INSIDE the heavy sim systems (compute-parallel /
# apply-canonical). Work-stealing order is nondeterministic by design — the parallel region is RNG-free +
# disjoint-cell + order-independent-reduction, so the result is independent of it (the pinned hash + multi-ISA
# gate are the oracles). A minor bump is a cross-version reproducibility event to re-gate.
rayon = "1.12"

[profile.release]
# Determinism is build-scoped (SPEC §6); keep the release profile fixed for the reference build.
lto = "thin"
codegen-units = 1
