[package]
name = "crispr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cas-variant table, PAM finding (rust-bio), Score traits, edit application. Lands in Stage 1."

[features]
proptest = []

[dependencies]
genome = { workspace = true }
