[package]
name = "crispr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cas-variant table, PAM finding (rust-bio), Score traits, edit application. Lands in Stage 1."

[features]
proptest = []

[dependencies]
genome = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
bio = { workspace = true }
rand_chacha = { workspace = true }  # seeded ChaCha8 RNG for edit application (inv. #3); use rand_chacha::rand_core

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }  # JSON round-trip tests for the GuideSequence serde impl (SPEC §5)
