[package]
name = "genome"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Parametric genome data model (Loci → typed Parameters + ontology tags). SPEC §4 / TAXONOMY.md."

[features]
# Empty flag enabling the proptest-gated property tests under `cargo test --features proptest` (gate §10.4).
proptest = []

[dependencies]
serde = { workspace = true }  # MIT/Apache-2.0 — derive(Serialize/Deserialize) for replay-log ids (LocusId; SPEC §5)

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }  # round-trip the serde-derived ids in tests (SPEC §5)
