[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless batch runner: N seeded deterministic runs + --hash-only determinism artifact (SPEC §2.2, §W6-W8)."

[features]
proptest = []

[dependencies]
sim-core = { workspace = true }
genome = { workspace = true }   # parametric genome data model — LocusId targets for species edits (S3.1)
crispr = { workspace = true }   # Cas-variant table + apply_edit — the species-granular CRISPR action (S3.1)

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dev-dependencies]
proptest = { workspace = true }
