[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless batch runner: N seeded deterministic runs + --hash-only determinism artifact (SPEC §2.2, §W6-W8)."

[features]
proptest = []

[dependencies]
sim-core = { workspace = true }
genome = { workspace = true }   # parametric genome data model — LocusId targets for species edits (S3.1)
crispr = { workspace = true }   # Cas-variant table + apply_edit — the species-granular CRISPR action (S3.1)
discovery = { path = "../discovery" }  # D1 PerGenTrace schema + D0 scorer — the off-hash capture seam (D1, inv #1/#5)
serde = { workspace = true }       # derive(Serialize/Deserialize) for Action/EditAction + replay schemas (S3.2)
serde_json = { workspace = true }  # seed.json + actions.ndjson replay logs (SPEC §5)
gif = { workspace = true }         # MIT/Apache — in-process animated-GIF encoder for the scenario preview (ADR-032, inv #1)
png = { workspace = true }         # MIT/Apache — PNG decoder for the captured --shot keyframes (ADR-032, inv #1)

[lib]
name = "harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dev-dependencies]
proptest = { workspace = true }
