[package]
name = "relations-index"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Relations index — ADR-014 boundary crate. Exact integer-L1 k-NN + single-link guild clustering over the off-hash per-species signatures; std-only / subprocess-only. The sqlite-vec scale path stays behind the process boundary (a .db sidecar), never linked. Mirrors oracle-fba / oracle-slim."

[features]
proptest = []

# INVARIANT #1 (SPEC §2.1.1): this is a PROCESS-BOUNDARY crate. It MUST carry ZERO normal/build dependencies
# (std-only) so it can never link a GPL (or any) library — only shell out. Enforced by the license gate
# (scripts/check_license.sh — `relations-index` is in BOUNDARY_CRATES; the skip branch flips to enforced the
# moment this manifest lands). The DEFAULT InRustIndex (exact integer-L1 k-NN + single-link union-find) needs
# only std and is the only CI/gate path. The sqlite-vec scale path (Apache-2.0 OR MIT, GPL-clean) lives BEHIND
# the boundary as a subprocess / loadable-extension SIDECAR resolved via $RELDB_BIN→~/.local/bin→PATH — a
# run-namespaced .db FILE the sim core never opens — so it is NOT a linked crate and the zero-dep tree holds
# even when activated. Pinned (inv #7) in DECISIONS.md when the scale trigger trips. proptest is a dev/feature
# gate for this crate's own tests only (matching oracle-fba / oracle-slim).
[dependencies]
